kustomize/experimental/seaweedfs/base/patches/add-arg-metadata-grpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadata-grpc-deployment
spec:
  template:
    spec:
      containers:
      - name: container
        args:
        - --grpc_port=8080
        - --mysql_config_database=$(MYSQL_DATABASE)
        - --mysql_config_host=$(MYSQL_HOST)
        - --mysql_config_port=$(MYSQL_PORT)
        - --mysql_config_user=$(DBCONFIG_USER)
        - --mysql_config_password=$(DBCONFIG_PASSWORD)
        - --enable_database_upgrade=true
        - '--grpc_channel_arguments=grpc.max_metadata_size=16384'
