kustomize/experimental/seaweedfs/base/patches/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  labels:
    app: minio
spec:
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
      - args:
        - server
        - /data
        image: minio/minio:RELEASE.2019-08-14T20-37-41Z
        name: minio
        ports:
        - containerPort: 9000
        securityContext:
          allowPrivilegeEscalation: false
          seccompProfile:
            type: RuntimeDefault
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 0
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - mountPath: /data
          name: data
          subPath: minio
        resources:
          requests:
            cpu: 20m
            memory: 100Mi
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: minio-pvc
