kustomize/experimental/seaweedfs/base/patches/virtual-service-ml-pipeline-ui.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ml-pipeline-ui
spec:
  gateways:
  - ingress-kubeflow/ingress-kubeflow-istio-ingress-gateway-https
